# SenseService

./: LICENSE  README.md  pyproject.toml
Scripts/: main.py  service.py  windows_service.py
Scripts/installers/: unix_service_install.py
sense_service/: __about__.py  __init__.py  arguments.py  collector.py  environment.py  errors.py  helpers.py  main.py
sense_service/sensors/: __init__.py  collector.py
