[tool.poetry]
name = "senseservice"
version = "1.0-dev.1"
description = "Service for broadcasting sense data over mqtt"
authors = ["Inspyre Softworks"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
